Closed Bug 18501 Opened 25 years ago Closed 24 years ago

submission problems with http://maps.mcom.com

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: mscott, Assigned: pollmann)

References

Details

(Whiteboard: [nsbeta2+][dogfood-] fix in hand)

Attachments

(1 file)

I don't know where this bug lies so I'm going to start with html form
submissions since that was the last action I made before I saw the problem.


I wanted to look up a conference room on our internal maps server.
I went to http://maps and typed in the name of the conference room
in the html text edit box.


I then hit enter and nothing really happened. Well something did, the form
did get cleared from the window but the page with the map information
never actually loaded next. So I never got the new page with the
map search results that showed me where the conference room was.

This was using the M11 11/9 release build on windows.
Assignee: karnaze → pollmann
Eric, can you take a look at this and reassign as appropriate.
Status: NEW → ASSIGNED
Target Milestone: M12
Looks like Nav calls the onchange handler before submit when pressing Enter in a
single text field form.  I'll migrate this behaviour over
After careful consideration, I've decided that I probably won't get this bug in
for M12.  Currently I have nearly 50 bugs scheduled for M13, so there is a
possibility that this bug may need to be moved out farther still.
QA Contact update.
Target Milestone: M13 → M16
Setting M16. We should try to fix this before final as it would be bad if we
break all the single-field forms on the web.
*** Bug 25083 has been marked as a duplicate of this bug. ***
Rescheduling
Target Milestone: M16 → M21
This bug is really in my way. It's one of the few things I need to use 4.7 to 
do, so I'm nominating for dogfood. Is our internal maps page really the only web 
site relying on this onchange behavior?
Keywords: dogfood
Setting to [nsbeta2+][dogfood-] radar.  Spoke with pollmann, not to common.
Whiteboard: [nsbeta2+][dogfood-]
I have a partial fix, to get the OnChange event sent for the text box before the 
frame is submitted.  This causes a locally mirrored version of the page to work, 
but there is some other problem with http://maps (I think javascript may be 
barfing because the top frame doesn't have permission to change the location of 
the bottom frame).
Whiteboard: [nsbeta2+][dogfood-] → [nsbeta2+][dogfood-] partial fix attached.
OS: other → All
Hardware: PC → All
Moving to M16 per nsbeta2+.
Target Milestone: M21 → M16
*** Bug 35102 has been marked as a duplicate of this bug. ***
See also Bug 34587, which may be a dup.
CC'ing Harish for crash in nsParser
The fix above will cause us to work for:

http://maps.mcom.com

But not work for:

http://maps

I'm guessing javascript thinks that those are two different domains and isn't 
letting one frame update the other for that reason?
Reported the http://maps failure as bug 39386.  I'll check in the above fix as 
soon as I get it reviewed.
Whiteboard: [nsbeta2+][dogfood-] partial fix attached. → [nsbeta2+][dogfood-] fix in hand
Fix checked in.  To verify, go to http://maps.mcom.com and enter your login id.  
Using http://maps as a shortcut won't work, but this is already reported as bug 
39386.  Thanks!
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Summary: submission problems with http://maps → submission problems with http://maps.mcom.com
Marking VERIFED FIXED on:
 - MacOS9 2000-05-23-12-M16 Commercial Build
 - Linux6 2000-05-23-10-M16 Commercial Build
 - Win95 2000-05-23-10-M16 Commercial Build
Status: RESOLVED → VERIFIED
Adding keyword to bugs which already show a nsbeta2 triage value in the status 
whiteboard so the queries don't get screwed up.
Keywords: nsbeta2
Component: HTML: Form Submission → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: