Bug 18501: Send onChange before submitting on enter press in text input if the text was changed.  This fixes http://maps.mcom.com  r=harishd